import tools.elmfer.GenNativeSources
import tools.elmfer.CompileNatives
import tools.elmfer.SaveVersion

plugins {
	id 'fabric-loom' version '1.14-SNAPSHOT'
	id 'maven-publish'
	id "com.gradleup.shadow" version "9.3.0"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	
    runtimeOnly shadow("io.github.spair:imgui-java-binding:${project.imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-lwjgl3:${project.imgui_version}") {
		exclude(group: "org.lwjgl") // Do not include transitive LWJGL3 dependency.
	}

	runtimeOnly shadow("io.github.spair:imgui-java-natives-windows:${project.imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-natives-linux:${project.imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-natives-macos:${project.imgui_version}")
}

processResources {
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}
jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName}"}
	}
}

clean {
	delete fileTree("src/main/cpp/bridge") {
		include "*.h"
		include "*.cpp"
		exclude "cnmcuJava.cpp"
		exclude "cnmcuJava.h"
	}
}

tasks.register("genNativeSources", GenNativeSources) {
	it.dependsOn assemble
	
	sourceDir = "src/main/java"
	bridgeDir = "src/main/cpp/bridge"
	
}

tasks.register("compileNatives", CompileNatives) {
	dependsOn genNativeSources
	
	sourceDir = "src/main/cpp"
	buildDir = "build/natives"
	targetDir = "run/cnmcu/natives/${project.mod_version}"
}

tasks.register("saveVersion", SaveVersion)

shadowJar {
	configurations = [project.configurations.shadow]
}

remapJar {
	input = tasks.shadowJar.archiveFile
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
